# Task_Tracker

./: .gitignore  README.md  pyproject.toml
core/: main.py
task_tracker/: main.py
task_tracker/core/: exceptions.py  task_manager.py
